[package]
name = "gwaihir-client-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.185", features = ["derive"] }
chrono = "0.4.26"
nutype = { git = "https://github.com/greyblake/nutype", branch = "master", features = ["serde"] } # until https://github.com/greyblake/nutype/issues/87 is resolved and released (probably v0.4.0-beta.2)