[package]
name = "gwaihir-client-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.185", features = ["derive"] }
chrono = { version = "0.4.26", features = ["serde"] }
nutype = { version = "0.4.0-beta.2", features = ["serde"] }
enum-display-derive = "0.1.1"
