[package]
name = "gwaihir"
version = "0.1.0"
authors = ["Emil Ernerfeldt <emil.ernerfeldt@gmail.com>"]
edition = "2021"
rust-version = "1.71"

[dependencies]
egui = { git = "https://github.com/emilk/egui", branch = "master" }
eframe = { git = "https://github.com/emilk/egui", branch = "master", default-features = false, features = [
    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
log = "0.4"
windows = { version = "0.48.0", features = ["Win32_System_RemoteDesktop", "Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_Foundation"] }

# You only need serde if you want app persistence:
serde = { version = "1", features = ["derive"] }
raw-window-handle = "0.5.2"
winit = "0.28.6"
tray-icon = "0.8.0"
thiserror = "1.0.44"
winreg = "0.50.0"
lodepng = "3.7.2"
auto-launch = "0.4.0"

# local:
gwaihir-client-lib = { path = "../gwaihir-client-lib" }
networking-spacetimedb = { path = "../networking-spacetimedb" }

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"


[patch.crates-io]

# If you fork https://github.com/emilk/egui you can test with:
# egui = { path = "../egui/crates/egui" }
# eframe = { path = "../egui/crates/eframe" }
