[package]
name = "gwaihir"
version = "0.1.0"
authors = ["Emil Ernerfeldt <emil.ernerfeldt@gmail.com>"]
edition = "2021"
rust-version = "1.71"

[dependencies]
egui = { git = "https://github.com/emilk/egui", branch = "master" }
eframe = { git = "https://github.com/emilk/egui", branch = "master", default-features = false, features = [
    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
serde = { version = "1", features = ["derive"] }
winit = "0.28.6"
thiserror = "1.0.44"
lodepng = "3.7.2"
nutype = { version = "0.4.0-beta.2", features = ["serde"] }
auto-launch = { git = "https://github.com/OmegaJak/auto-launch", branch = "report_task_manager_disabled_as_disabled" } # Until https://github.com/zzzgydi/auto-launch/pull/8 is merged and available
bounded-vec-deque = "0.1.1"

# OS Interactions
windows = { version = "0.48.0", features = ["Win32_System_RemoteDesktop", "Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_Foundation"] }
raw-window-handle = "0.5.2"
tray-icon = "0.8.0"
winreg = "0.50.0"
directories-next = "2.0.0"
opener = "0.6.1"
active-win-pos-rs = "0.8.1"

# Logging
log = "0.4"
flexi_logger = "0.26.0"
log-panics = "2.1.0"
log_err = "1.1.1"

# Local
gwaihir-client-lib = { path = "../gwaihir-client-lib" }
networking-spacetimedb = { path = "../networking-spacetimedb" }

[dev-dependencies]
assert_matches = "1.5.0"

# If you fork https://github.com/emilk/egui you can test with:
# egui = { path = "../egui/crates/egui" }
# eframe = { path = "../egui/crates/eframe" }
