[package]
name = "networking-spacetimedb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
spacetimedb-sdk = "0.6.1"
serde = { version = "1" }

# local:
gwaihir-client-lib = { path = "../gwaihir-client-lib" }
serde_json = "1.0.105"
