[package]
name = "serde-versioner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/progress.rs"

[dependencies]
pro-serde-versioned = "1.0.2"
syn = { version = "2.0.48", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro-error = "1.0.4"

[dev-dependencies]
trybuild = { version = "1.0", features = ["diff"] }
serde = { version = "1", features = ["derive"] }
